2005-01-05  Alp Toker  <alp@atoker.com>

	* gtk/TextBuffer.custom : Mark SetText obsolete in favour of the Text
	property, and use Text in SetText in the meantime.

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api.raw : regen'd.
	* sources/gtk-sharp-sources.xml : exclude file system backend source.
	[Fixes #70904, #70897, and #70900]

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark out params for IMContext.GetSurrounding
	and GetPreeditString.
	[Fixes #70995]

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/CellLayout.custom : declare SetAttributes and SetCellDataFunc.
	* gtk/CellView.custom : impl SetAttributes and SetCellDataFunc.
	* gtk/ComboBox.custom : impl SetAttributes and SetCellDataFunc.
	* gtk/EntryCompletion.custom : impl SetAttributes and SetCellDataFunc.
	* gtk/Gtk.metadata : hide some methods to be manually implemented.
	* gtk/Makefile.am : add new customs.
	* gtk/NodeCellDataFunc : use CellLayoutDataFuncNative.
	* gtk/TreeView.custom : use CellLayoutDataFunc not TreeCellDataFunc.
	* gtk/TreeViewColumn.custom : impl SetAttributes and SetCellDataFunc.
	[Fixes #70941]

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : set preferred on CellViewMenuItem.NewWithText.
	[Fixes #70938]

2005-01-03  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeStore.cs : expose TreeModelFlags.ListOnly if the TreeNode
	has ListOnly set.
	* gtk/TreeNodeAttribute.cs : add ListOnly named value.

2004-12-30  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : mark the Data hashtable obsolete.

2004-12-30  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide TreeView.InsertColumnWith*.
	* gtk/TreeView.cs : manual implementations of InsertColumn overloads
	for WithAttributes and WithDataFunc.

2004-12-30  Alp Toker  <alp@atoker.com>

	* README.generator: Close tag fix for example XML.

2004-12-28  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* sample/gnomevfs/TestVolumes.cs: Update sample.
