@@ -1,94 +1,0 @@
-<Type Name="ImageAnimationData" FullName="Gtk.ImageAnimationData">
-  <TypeSignature Language="C#" Value="public sealed struct ImageAnimationData;" Maintainer="auto" />
-  <AssemblyInfo>
-    <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey>
-    </AssemblyPublicKey>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <AssemblyCulture>neutral</AssemblyCulture>
-    <Attributes />
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>To be added</summary>
-    <remarks />
-  </Docs>
-  <Base>
-    <BaseTypeName>System.ValueType</BaseTypeName>
-  </Base>
-  <Interfaces />
-  <Attributes />
-  <Members>
-    <Member MemberName="Zero">
-      <MemberSignature Language="C#" Value="public static Gtk.ImageAnimationData Zero;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.ImageAnimationData</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="New">
-      <MemberSignature Language="C#" Value="public static Gtk.ImageAnimationData New (IntPtr raw);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.ImageAnimationData</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="raw" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="raw">a <see cref="T:IntPtr" /></param>
-        <returns>a <see cref="T:Gtk.ImageAnimationData" /></returns>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="iter">
-      <MemberSignature Language="C#" Value="public Gdk.PixbufAnimationIter iter { set; get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.PixbufAnimationIter</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="value">a <see cref="T:Gdk.PixbufAnimationIter" /></param>
-        <returns>a <see cref="T:Gdk.PixbufAnimationIter" /></returns>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="anim">
-      <MemberSignature Language="C#" Value="public Gdk.PixbufAnimation anim { set; get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.PixbufAnimation</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="value">a <see cref="T:Gdk.PixbufAnimation" /></param>
-        <returns>a <see cref="T:Gdk.PixbufAnimation" /></returns>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="FrameTimeout">
-      <MemberSignature Language="C#" Value="public uint FrameTimeout;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.UInt32</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <remarks />
-      </Docs>
-    </Member>
-  </Members>
-</Type>
