@@ -1,66 +1,0 @@
-<Type Name="ImageIconSetData" FullName="Gtk.ImageIconSetData">
-  <TypeSignature Language="C#" Value="public sealed struct ImageIconSetData;" Maintainer="auto" />
-  <AssemblyInfo>
-    <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey>
-    </AssemblyPublicKey>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <AssemblyCulture>neutral</AssemblyCulture>
-    <Attributes />
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>Represents a set of image icons.</summary>
-    <remarks />
-  </Docs>
-  <Base>
-    <BaseTypeName>System.ValueType</BaseTypeName>
-  </Base>
-  <Interfaces />
-  <Attributes />
-  <Members>
-    <Member MemberName="Zero">
-      <MemberSignature Language="C#" Value="public static Gtk.ImageIconSetData Zero;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.ImageIconSetData</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>Generates an empty object.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="New">
-      <MemberSignature Language="C#" Value="public static Gtk.ImageIconSetData New (IntPtr raw);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.ImageIconSetData</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="raw" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>Constructor.</summary>
-        <param name="raw">An <see cref="T:IntPtr" />, the underlying C object.</param>
-        <returns>A new <see cref="T:Gtk.ImageIconSetData" /></returns>
-        <remarks>This is for internal use; application developers shouldn't need to call this.</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="icon_set">
-      <MemberSignature Language="C#" Value="public Gtk.IconSet icon_set { set; get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.IconSet</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>The underlying <see cref="T:Gtk.IconSet" /> in this data.</summary>
-        <param name="value">a  <see cref="T:Gtk.IconSet" /></param>
-        <returns>an object of type  <see cref="T:Gtk.IconSet" /></returns>
-        <remarks />
-      </Docs>
-    </Member>
-  </Members>
-</Type>
