@@ -448,6 +448,12 @@
   <attr path="/api/namespace/struct[@cname='GtkBoxChild']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkFixedChild']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkItemFactoryItem']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkImageAnimationData']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkImageIconSetData']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkImageImageData']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkImagePixbufData']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkImagePixmapData']" name="hidden">1</attr>
+  <attr path="/api/namespace/struct[@cname='GtkImageStockData']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkKeyHash']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkLabelSelectionInfo']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GtkNotebookPage']/method[@name='Num']" name="hidden">1</attr>
