@@ -1,3 +1,7 @@
+2005-01-05  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/Gtk.metadata : hide some internal Image*Data structs.
+
 2005-01-05  Alp Toker  <alp@atoker.com>
 
 	* gtk/TextBuffer.custom : Mark SetText obsolete in favour of the Text
